<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/level1_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:tag="small">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/expressiveOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivlike"
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/like"
                    android:contentDescription="@string/like"/>
                <ImageView
                    android:id="@+id/ivyes"
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/yes"
                    android:contentDescription="@string/yes"/>
                <ImageView
                    android:id="@+id/ivadd"
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/more"
                    android:contentDescription="@string/more"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/expressiveTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivdislike"
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/dontlike"
                    android:contentDescription="@string/dont_like"/>
                <ImageView
                    android:id="@+id/ivno"
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/no"
                    android:contentDescription="@string/no"/>
                <ImageView
                    android:id="@+id/ivminus"
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/less"
                    android:contentDescription="@string/less"/>
            </LinearLayout>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="525dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="vertical"
            android:scrollbarFadeDuration="0"
            android:layout_marginBottom="100dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayoutNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-36dp">
        <ImageView
            android:id="@+id/ivhome"
            android:layout_width="115dp"
            android:layout_height="123dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>
        <ImageView
            android:id="@+id/keyboard"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/keyboard"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/ivhome"
            android:contentDescription="@string/keyboard_open"/>
        <ImageView
            android:id="@+id/ivback"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/back"
            android:layout_marginBottom="8dp"
            android:layout_toLeftOf="@+id/ivhome"
            android:contentDescription="@string/back"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="515dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et"
            android:layout_width="430dp"
            android:layout_height="100dp"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:textSize="20sp"
            android:padding="8dp"
            android:gravity="top|left"
            android:scrollIndicators="right|end"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:background="@drawable/rounded_back"
            android:contentDescription="@string/edttxt_msg"/>
        <ImageView
            android:id="@+id/ttsbutton"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:src="@drawable/ic_search_list_speaker"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/speak"/>
    </LinearLayout>
    <ImageView
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:src="@drawable/jellow"
        android:clickable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/profile_save_btn_height"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/profile_save_btn_txt_size"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:background="@drawable/edit_board_dialog_edit_text"
        android:layout_marginLeft="8dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textAllCaps="false"
        android:text="@string/txtSave"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="8dp"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
